--- a/css/styles.css
+++ b/css/styles.css
@@ -129,30 +129,27 @@ body {
   color: var(--accent-color);
 }
 
-.icon-envelope {
-  display: flex;
-  align-items: center;
+.icons-svg {
+  fill: #757575;
+}
+
+.icons-list {
+  display: inline-block;
   justify-content: center;
+  align-items: center;
+}
+
+.icons-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 305px;
   margin-right: 30px;
 }
 
-.envelope {
-  margin-right: 10px;
-  fill: #757575;
-}
-
-.envelope:hover,
-.envelope:focus {
+.icons-header-link:hover .icons-svg,
+.icons-header-link:focus .icons-svg {
   fill: var(--accent-color);
-}
-
-.smartphone {
-  fill: #757575;
-}
-
-.smartphone:hover,
-.smartphone:focus {
-  fill: #2196f3;
 }
 
 /* main section */
@@ -165,7 +162,7 @@ body {
   background-image: url('../images/overlay.jpg');
   background-position: center;
   background-size: cover;
-  background-image: rgba(47, 48, 58, 0.4);
+  background-color: rgba(47, 48, 58, 0.4);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -317,59 +314,44 @@ body {
   line-height: 1.2px;
 }
 
-.team-link {
-  display: flex;
-  justify-content: center;
-
-  text-decoration: none;
+.social-icons {
+  display: inline-flex;
 }
 
-.icon-team {
-  display: inline-block;
+.social-icons-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 44px;
   height: 44px;
+  border-radius: 50%;
+  background-color: #ffffff;
+}
+
+.social-icons-item {
   margin-right: 10px;
   margin-bottom: 30px;
 }
 
-.icon-team:nth-child(4) {
+.social-icons-item:last-child {
   margin-right: 0;
 }
 
-.instagram {
+.social-icons-link:hover .social-icons-svg,
+.social-icons-link:focus .social-icons-svg {
   fill: #ffffff;
 }
 
-.instagram:hover,
-.instagram:focus {
-  fill: #2196f3;
+.social-icons-link:hover,
+.social-icons-link:focus {
+  background-color: var(--accent-color);
 }
 
-.twitter {
-  fill: #ffffff;
-}
-
-.twitter:hover,
-.twitter:focus {
-  fill: #2196f3;
-}
-
-.facebook {
-  fill: #ffffff;
-}
-
-.facebook:hover,
-.facebook:focus {
-  fill: #2196f3;
-}
-
-.linkedin {
-  fill: #ffffff;
-}
-
-.linkedin:hover,
-.linkedin:focus {
-  fill: #2196f3;
+.social-icons-svg {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
 }
 
 .card {
@@ -382,86 +364,35 @@ body {
 /* client */
 
 .client-link {
-  text-decoration: none;
-  display: flex;
-}
-
-.icon-client {
   width: 170px;
   height: 92px;
   border-radius: 4px;
   border: 1px solid #afb1b8;
   align-items: center;
   justify-content: center;
-  display: inline-flex;
-  margin-right: 30px;
+  display: flex;
 }
 
-.icon-client:last-child {
-  margin-right: 0;
+.icon-client:not(:last-child) {
+  margin-right: 30px;
 }
 
 .item-client {
   display: flex;
 }
 
-.icon-client:hover,
-.icon-client:focus {
-  border: 1px solid #2196f3;
-}
-
-.group-one {
+.client-svg {
   fill: #afb1b8;
 }
 
-.group-one:hover,
-.group-one:focus {
-  fill: #2196f3;
+.client-link:hover .client-svg,
+.client-link:focus .client-svg {
+  fill: var(--accent-color);
 }
 
-.group-two {
-  fill: #afb1b8;
-}
-
-.group-two:hover,
-.group-two:focus {
-  fill: #2196f3;
-}
-
-.group-three {
-  fill: #afb1b8;
-}
-
-.group-three:hover,
-.group-three:focus {
-  fill: #2196f3;
-}
-
-.group-four {
-  fill: #afb1b8;
-}
-
-.group-four:hover,
-.group-four:focus {
-  fill: #2196f3;
-}
-
-.group-five {
-  fill: #afb1b8;
-}
-
-.group-five:hover,
-.group-five:focus {
-  fill: #2196f3;
-}
-
-.group-six {
-  fill: #afb1b8;
-}
-
-.group-six:hover,
-.group-six:focus {
-  fill: #2196f3;
+.client-link:hover,
+.client-link:focus {
+  border: 1px solid var(--accent-color);
 }
 
 /* footer */
@@ -521,31 +452,39 @@ body {
   display: flex;
 }
 
+.social-footer {
+  display: inline-flex;
+}
+
+.social-footer-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #434345;
+}
+
+.social-footer-link:hover,
+.social-footer-link:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-svg {
+  width: 20px;
+  height: 20px;
+  fill: #ffffff;
+}
+
+.social-footer-svg:not(:first-child) {
+  margin-left: 10px;
+}
+
 .social-links {
   margin-top: 12px;
   margin-left: 70px;
-}
-
-.instagram-footer,
-.twitter-footer,
-.facebook-footer,
-.linkedin-footer {
-  fill: rgba(255, 255, 255, 0.1);
-}
-
-.instagram-footer:hover,
-.instagram-footer:focus,
-.twitter-footer:hover,
-.twitter-footer:focus,
-.facebook-footer:hover,
-.facebook-footer:focus,
-.linkedin-footer:hover,
-.linkedin-footer:focus {
-  fill: var(--accent-color);
-}
-
-.social-footer {
-  display: flex;
 }
 
 /* button */
@@ -554,6 +493,8 @@ body {
   color: var(--title-text-color);
   background-color: var(--primary-bg-color);
   cursor: pointer;
+  border-radius: 4px;
+  border: none;
 }
 
 .button.primary {
